fix(ui-forms): TextArea overflow and focus ring updates
Fixes: INSTUI-1661, INSTUI-1625

Test plan:

- Confirm that the bugs described in both JIRA tickets are fixed
- Confirm no regressions in TextArea in all supported browsers
- Confirm legacy testbed tests for TextArea pass

Note: For INSTUI-1661, Safari seems to throttle the resize event
for textareas. Therefore, if the TextArea is resized quickly, the
focus ring can look left behind, as it doesn't update its height
often enough: https://cl.ly/99268f963db8. If you resize slowly,
though, it works.

Reviewed-on: https://gerrit.instructure.com/173369
Tested-by: Jenkins
Product-Review: Jennifer Stern <jstern@instructure.com>
QA-Review: Daniel Sasaki <dsasaki@instructure.com>

--- a/packages/ui-forms/src/components/TextArea/styles.css
+++ b/packages/ui-forms/src/components/TextArea/styles.css
@@ -31,9 +31,6 @@
   display: block;
   box-sizing: border-box;
   padding: var(--padding);
-  transition: all 0.2s ease-out;
-  outline: 0.1875rem solid transparent;
-  outline-offset: -0.5rem;
   font-family: var(--fontFamily);
   font-weight: var(--fontWeight);
   border-width: var(--borderWidth);
